--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,11 +8,34 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1500">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="395*"/>
+            <RowDefinition Height="389*"/>
+        </Grid.RowDefinitions>
         <Canvas
             Background="#FFA0A0A0"
             x:Name="canvas"
             MouseLeftButtonDown="canvas_MouseLeftButtonDown"
             MouseLeftButtonUp="canvas_MouseLeftButtonUp"
-            MouseMove="canvas_MouseMove"/>
+            MouseMove="canvas_MouseMove" Margin="300,0,300,0" Grid.RowSpan="2" Width="900"/>
+        <Label Content="Keresztnév:" HorizontalAlignment="Left" Margin="1217,24,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="PersonSurnameEntry" HorizontalAlignment="Left" Margin="1348,28,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="PersonForenameEntry" HorizontalAlignment="Left" Margin="1348,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="GenderCombobox" HorizontalAlignment="Left" Margin="1348,120,0,0" VerticalAlignment="Top" Width="120" Height="25" SelectedIndex="0">
+            <ComboBoxItem Content="Ismeretlen"></ComboBoxItem>
+            <ComboBoxItem Content="Férfi"></ComboBoxItem>
+            <ComboBoxItem Content="Nő"></ComboBoxItem>
+            <ComboBoxItem Content="Egyéb"></ComboBoxItem>
+        </ComboBox>
+        <Label Content="Vezetéknév:" HorizontalAlignment="Left" Margin="1217,73,0,0" VerticalAlignment="Top"/>
+        <Label Content="Nem:" HorizontalAlignment="Left" Margin="1217,118,0,0" VerticalAlignment="Top"/>
+        <ListView x:Name="PersonList" Margin="0,0,1200,0" Grid.RowSpan="2">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Vezetéknév" Width="auto"/>
+                    <GridViewColumn Header="Keresztnév" Width="auto"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
