--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -32,8 +32,9 @@
         <ListView x:Name="PersonList" Margin="0,0,1200,0" Grid.RowSpan="2">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Vezetéknév" Width="auto"/>
-                    <GridViewColumn Header="Keresztnév" Width="auto"/>
+                    <GridViewColumn Header="Vezetéknév" Width="auto" DisplayMemberBinding="{Binding surname}"/>
+                    <GridViewColumn Header="Keresztnév" Width="auto" DisplayMemberBinding="{Binding forename}"/>
+                    <GridViewColumn Header="Nem" Width="auto" DisplayMemberBinding="{Binding gender}"/>
                 </GridView>
             </ListView.View>
         </ListView>
