--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Csaladfa"
         x:Class="Csaladfa.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1500">
+        Title="MainWindow" Height="800" Width="1500"
+        Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="395*"/>
