--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -122,7 +122,8 @@
                 <Label Content="Megjegyzés:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="10" Grid.Column="0"/>
                 <TextBox x:Name="PersonNotesEntry" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" MinHeight="400" Height="Auto" Grid.Row="10" Grid.Column="1"/>
 
-                <Button x:Name="PersonInfoSaveButton" Content="Mentés" Padding="5" Foreground="Green" FontWeight="Bold" Click="PersonInfoSaveButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2"/>
+                <Button x:Name="PersonInfoSaveButton" Content="Mentés" Padding="5" Foreground="Green" FontWeight="Bold" Click="PersonInfoSaveButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="11" Grid.Column="0"/>
+                <Button x:Name="PersonDeleteButton" Content="Törlés" Padding="5" Foreground="Red" Click="PersonDeleteButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="11" Grid.Column="1"/>
             </Grid>
         </Grid>
     </Grid>
