--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         x:Class="Csaladfa.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="780"
+        ResizeMode="NoResize"
         Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
