--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Csaladfa"
         x:Class="Csaladfa.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="780"
+        Title="MainWindow" Height="800" Width="810"
         ResizeMode="NoResize"
         Closing="Window_Closing">
     <Grid>
@@ -18,8 +18,7 @@
             <ColumnDefinition Width="400"/>
             <!--<ColumnDefinition Width="*"/>-->
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="320"/>
-            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="380"/>
         </Grid.ColumnDefinitions>
         <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
             <MenuItem Header="Új...">
@@ -47,96 +46,114 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Grid Grid.Row="1" Grid.Column="2" Background="White" Grid.ColumnSpan="2">
-            <Grid Margin="10,10,10,10" x:Name="PersonInfoGrid">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="25"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+        <TabControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Width="400">
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="Adatok"/>
+                </TabItem.Header>
+                <Grid>
+                    <Grid Margin="10,10,10,10" x:Name="PersonInfoGrid">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                <Label Content="Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                <TextBox x:Name="PersonSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="0" Grid.Column="1"/>
+                        <Label Content="Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
+                        <TextBox x:Name="PersonSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="0" Grid.Column="1"/>
 
-                <Label Content="Leánykori Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
-                <TextBox x:Name="PersonMaidenSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="1" Grid.Column="1"/>
+                        <Label Content="Leánykori Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
+                        <TextBox x:Name="PersonMaidenSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="1" Grid.Column="1"/>
 
-                <Label Content="Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0"/>
-                <TextBox x:Name="PersonForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="2" Grid.Column="1"/>
+                        <Label Content="Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0"/>
+                        <TextBox x:Name="PersonForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="2" Grid.Column="1"/>
 
-                <Label Content="Leánykori Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"/>
-                <TextBox x:Name="PersonMaidenForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="3" Grid.Column="1"/>
+                        <Label Content="Leánykori Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"/>
+                        <TextBox x:Name="PersonMaidenForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="3" Grid.Column="1"/>
 
-                <Label Content="Nem:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"/>
-                <ComboBox x:Name="GenderCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="25" SelectedIndex="0" Grid.Row="4" Grid.Column="1">
-                    <ComboBoxItem Content="(Ismeretlen)" Foreground="Gray"/>
-                    <ComboBoxItem Content="Férfi"/>
-                    <ComboBoxItem Content="Nő"/>
-                    <ComboBoxItem Content="Egyéb"/>
-                </ComboBox>
+                        <Label Content="Nem:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"/>
+                        <ComboBox x:Name="GenderCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="25" SelectedIndex="0" Grid.Row="4" Grid.Column="1">
+                            <ComboBoxItem Content="(Ismeretlen)" Foreground="Gray"/>
+                            <ComboBoxItem Content="Férfi"/>
+                            <ComboBoxItem Content="Nő"/>
+                            <ComboBoxItem Content="Egyéb"/>
+                        </ComboBox>
 
-                <Label Content="Születési Idő:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"/>
-                <Grid Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="35"/>
-                        <ColumnDefinition Width="95"/>
-                        <ColumnDefinition Width="70"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox x:Name="BirthDateYearInput" PreviewTextInput="BirthOrDeathDateYearInput_PreviewTextInput" MaxLength="4" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                    <ComboBox x:Name="BirthDateMonthInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
-                    <ComboBox x:Name="BirthDateDayInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
+                        <Label Content="Születési Idő:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"/>
+                        <Grid Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="35"/>
+                                <ColumnDefinition Width="95"/>
+                                <ColumnDefinition Width="70"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox x:Name="BirthDateYearInput" PreviewTextInput="BirthOrDeathDateYearInput_PreviewTextInput" MaxLength="4" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
+                            <ComboBox x:Name="BirthDateMonthInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
+                            <ComboBox x:Name="BirthDateDayInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
+                        </Grid>
+
+                        <Label Content="Születési Hely:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="6" Grid.Column="0"/>
+                        <ComboBox x:Name="PersonBirthPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="6" Grid.Column="1"/>
+
+                        <Label Content="Halál Ideje:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0"/>
+                        <Grid Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="35"/>
+                                <ColumnDefinition Width="95"/>
+                                <ColumnDefinition Width="70"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox x:Name="DeathDateYearInput" PreviewTextInput="BirthOrDeathDateYearInput_PreviewTextInput" MaxLength="4" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
+                            <ComboBox x:Name="DeathDateMonthInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
+                            <ComboBox x:Name="DeathDateDayInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
+                        </Grid>
+
+                        <Label Content="Halál Helye:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="8" Grid.Column="0"/>
+                        <ComboBox x:Name="PersonDeathPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="8" Grid.Column="1"/>
+
+                        <Label Content="Foglalkozás:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="9" Grid.Column="0"/>
+                        <TextBox x:Name="PersonOccupationEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="9" Grid.Column="1"/>
+
+                        <Label Content="Megjegyzés:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="10" Grid.Column="0"/>
+                        <TextBox x:Name="PersonNotesEntry" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="200" Grid.Row="10" Grid.Column="1"/>
+
+                        <!--
+                    <Label Content="Szülők:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="11" Grid.Column="0"/>
+                    <ComboBox x:Name="PersonParentsCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="11" Grid.Column="1"/>
+                    -->
+
+                        <Label Content="Házastárs:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="11" Grid.Column="0"/>
+                        <ComboBox x:Name="PersonSpouseCombobox" DisplayMemberPath="FormattedName" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="11" Grid.Column="1"/>
+
+                        <Label Content="Rokonok:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="12" Grid.Column="0"/>
+                        <ListView x:Name="PersonRelativeList" HorizontalAlignment="Left" VerticalAlignment="Center" Width="370" Height="200" Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Kapcsolat"></GridViewColumn>
+                                    <GridViewColumn Header="Személy"></GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+
+                        <Button x:Name="PersonInfoSaveButton" Content="Mentés" Padding="5" Foreground="Green" FontWeight="Bold" Click="PersonInfoSaveButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="14" Grid.Column="0"/>
+                        <Button x:Name="PersonDeleteButton" Content="Törlés" Padding="5" Foreground="Red" Click="PersonDeleteButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="14" Grid.Column="1"/>
+                    </Grid>
                 </Grid>
-
-                <Label Content="Születési Hely:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="6" Grid.Column="0"/>
-                <ComboBox x:Name="PersonBirthPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="6" Grid.Column="1"/>
-
-                <Label Content="Halál Ideje:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0"/>
-                <Grid Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="35"/>
-                        <ColumnDefinition Width="95"/>
-                        <ColumnDefinition Width="70"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox x:Name="DeathDateYearInput" PreviewTextInput="BirthOrDeathDateYearInput_PreviewTextInput" MaxLength="4" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                    <ComboBox x:Name="DeathDateMonthInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
-                    <ComboBox x:Name="DeathDateDayInput" SelectedIndex="0" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
-                </Grid>
-
-                <Label Content="Halál Helye:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="8" Grid.Column="0"/>
-                <ComboBox x:Name="PersonDeathPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="8" Grid.Column="1"/>
-
-                <Label Content="Foglalkozás:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="9" Grid.Column="0"/>
-                <TextBox x:Name="PersonOccupationEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="9" Grid.Column="1"/>
-
-                <Label Content="Megjegyzés:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="10" Grid.Column="0"/>
-                <TextBox x:Name="PersonNotesEntry" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="200" Grid.Row="10" Grid.Column="1"/>
-
-                <!--
-                <Label Content="Szülők:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="11" Grid.Column="0"/>
-                <ComboBox x:Name="PersonParentsCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="11" Grid.Column="1"/>
-                -->
-                
-                <Label Content="Házastárs:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="11" Grid.Column="0"/>
-                <ComboBox x:Name="PersonSpouseCombobox" DisplayMemberPath="FormattedName" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="11" Grid.Column="1"/>
-
-                <Button x:Name="PersonInfoSaveButton" Content="Mentés" Padding="5" Foreground="Green" FontWeight="Bold" Click="PersonInfoSaveButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="13" Grid.Column="0"/>
-                <Button x:Name="PersonDeleteButton" Content="Törlés" Padding="5" Foreground="Red" Click="PersonDeleteButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="14" Grid.Column="1"/>
-            </Grid>
-        </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
