Implement deleting relationships

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -152,6 +152,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="25"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
 
@@ -161,7 +162,7 @@
                         -->
 
                         <Label Content="Házasságok:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                        <ListView x:Name="PersonMarriageList" HorizontalAlignment="Left" VerticalAlignment="Center" Width="370" Height="200" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                        <ListView x:Name="PersonMarriageList" SelectionChanged="PersonMarriageList_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Center" Width="370" Height="200" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn Header="Házastárs" DisplayMemberBinding="{Binding spouseName}"/>
@@ -172,6 +173,18 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
+                        <Grid Grid.Row="2" Grid.Column="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Button Content="Hozzáadás" Foreground="Green" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
+                            <Button Content="Törlés" x:Name="RelationshipDeleteButton" Click="RelationshipDeleteButton_Click" Foreground="Red" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
+                        </Grid>
+                            
 
                         <!--
                         <Label Content="Rokonok:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
