--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -177,12 +177,14 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Button Content="Hozzáadás" Foreground="Green" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                            <Button Content="Törlés" x:Name="RelationshipDeleteButton" Click="RelationshipDeleteButton_Click" Foreground="Red" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
+                            <Button Content="Szerkesztés..." x:Name="RelationshipEditButton" Click="RelationshipEditButton_Click" Foreground="Blue" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
+                            <Button Content="Törlés" x:Name="RelationshipDeleteButton" Click="RelationshipDeleteButton_Click" Foreground="Red" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
                         </Grid>
                             
 
