--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -182,7 +182,7 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
-                            <Button Content="Hozzáadás" Foreground="Green" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
+                            <Button Content="Hozzáadás" x:Name="RelationshipAddButton" Click="RelationshipAddButton_Click" Foreground="Green" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
                             <Button Content="Szerkesztés..." x:Name="RelationshipEditButton" Click="RelationshipEditButton_Click" Foreground="Blue" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
                             <Button Content="Törlés" x:Name="RelationshipDeleteButton" Click="RelationshipDeleteButton_Click" Foreground="Red" Margin="0,0,10,0" Padding="5" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="2"/>
                         </Grid>
